# midi_R1

./: README.md  cli.py  cli_hf.py  pyproject.toml  requirements.txt  tokenizerconfig20k.json
config/: model.yaml  model_v3_huggingfaces.yaml  train.yaml
generate/: 0.json  0.mid  1.json  1.mid  10.json  10.mid  11.json  11.mid  12.json  12.mid  13.json  13.mid  14.json  14.mid  15.json  15.mid  16.json  16.mid  17.json  17.mid  18.json  18.mid  19.json  19.mid  2.json  2.mid  20.json  20.mid  21.json  21.mid  22.json  22.mid  23.json  23.mid  24.json  24.mid  25.json  25.mid  26.json  26.mid  (+116 more)
scripts/: filter_data.py  loss_plot.py  midi_chunks.py  train_tokenizer.py  vocab_size_analysis.py
src/: cli_transformer.py
src/midiR1/: config.py
src/midiR1/data/: __init__.py  cache.py  dataset.py  gigamidi.py  split.py
src/midiR1/engine/: __init__.py  checkpointing.py  evaluate.py  inference.py  trainer.py
src/midiR1/model/: MLA.py  embeddings.py  expert.py  ffn.py  model.py  moe.py  mtp.py  prediction_head.py  transformer.py  transformer_block.py
src/midiR1/tests/: test_dataset.py  test_diagnostics.py  test_expert.py  test_labeling.py  test_mla.py  test_model.py  test_moe.py  test_mtp.py  test_rope.py  test_split.py  test_vocab_resize.py
src/midiR1/transformer_decoder/: MidiTransformer.py  positional_encoding.py  trainer.py
src/midiR1/utils/: diagnostics.py  labeling.py  logging.py  metrics.py  redirect.py  rms_norm.py  (+2 more)
src/midi_r1/: __init__.py  cli.py  config.py
tests/: test_data.py  test_model.py  test_trainer.py
tokenizers/: tokenizer2048REMI.json  tokenizer20kREMI.json  tokenizer_10000REMI.json  tokenizer_1024REMI.json
(+5 files in other folders)
