[tool.poetry]
name = "midi_r1_foundation"
version = "0.1.0"
description = "MIDI sequence modeling with Open R1 transformer architecture."
authors = ["Valerio Di Ceglie <valerio.diceglie97@gmail.com>"]
readme = "README.md"
packages = [
  { include = "midiR1", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.13"
torch = "==2.7.1+cu126"
datasets = ">=2.13.1"
transformers = ">=4.52.4"
miditok = ">=3.0.5"
symusic = ">=0.5.8"
hydra-core = ">=1.3"
python-dotenv = ">=1.1.0"
tqdm = ">=4.67.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
flake8 = "^6.0"
black = "^23.0"
isort = "^5.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"