[tool.poetry]
name = "midi_r1_foundation"
version = "0.1.0"
description = "MIDI sequence modeling with Open R1 transformer architecture."
authors = ["Valerio Di Ceglie <valerio.diceglie97@gmail.com>"]
readme = "README.md"
packages = [
  { include = "midiR1", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.13"
torch = "==2.10.0+cu126"
datasets = ">=2.13.1"
transformers = ">=4.52.4"
miditok = ">=3.0.5"
symusic = ">=0.5.8"
python-dotenv = ">=1.1.0"
tqdm = ">=4.67.1"
wandb = ">=0.16"
typer = ">=0.9"
matplotlib = ">=3.7"
numpy = ">=1.24"
scipy = ">=1.11"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
flake8 = "^6.0"
black = "^23.0"
isort = "^5.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["src/midiR1/tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"